# r2_fsspec

./: LICENSE  README.md  pyproject.toml
r2_fsspec/: __init__.py
